[package]
name = "teaparty"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { path="nix", features = ["socket", "net", "uio", "ioctl"]}
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
slog = "2.7.0"
slog-term = "2.9.1"
chrono = "0.4.38"
mio = { version = "1.0.2", features = ["os-poll", "net", "os-ext"]}
rocket = "0.5.1"
serde = "1.0.215"
serde_json = "1.0.133"
sha2 = "0.10.8"
hmac = "0.12.1"
