[package]
name = "teaparty"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { path="nix", features = ["socket", "net", "uio", "ioctl"]}
insta-cmd = { path="third_party/insta-cmd" }
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.1"
chrono = "0.4.38"
rocket = { version = "0.5.1", features = ["json"]}
serde = "1.0.215"
serde_json = "1.0.133"
sha2 = "0.10.8"
hmac = "0.12.1"
pnet = "0.35.0"
ctrlc = "3.4.5"
either = "1.13.0"
etherparse = {version = "0.17", features = ["std"] }
clio = {version="0.3.5", features=["clap-parse"]}
mio = "1.0.3"
syn = "2.0.100"
quote = "1.0.40"
owning_ref = "0.4.1"
yaml-rust2 = "0.10.3"
hashlink = "0.10.0"

[lib]
proc-macro = true

[lints.rust]
dead_code = "allow"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
